/*
 * This file was generated by the Gradle 'init' task.
 *
 * This is a general purpose Gradle build.
 * Learn how to create Gradle builds at https://guides.gradle.org/creating-new-gradle-builds
 */
plugins {
    id 'java'
    id 'org.jetbrains.intellij' version '1.17.2'
}

group 'cn.ieclipse.smartim'
version '3.0.0.223'

repositories {
    mavenCentral()
    maven { url 'https://jitpack.io' }
    maven {
        url = 'https://repo.maven.apache.org/maven2'
    }
}


dependencies {
    implementation fileTree(dir: 'lib', includes: ['*.jar'])
    implementation 'org.slf4j:slf4j-api:1.7.25'
    implementation 'ch.qos.logback:logback-classic:1.3.12'
    implementation 'ch.qos.logback:logback-core:1.3.12'
    implementation 'com.squareup.okhttp3:okhttp:3.14.4'
    implementation 'com.squareup.okhttp3:logging-interceptor:3.14.4'
    implementation 'com.google.code.gson:gson:2.9.1'
    implementation 'com.github.jamling.JavaUtils:core:933b1c6551'
    implementation('dom4j:dom4j:1.6.1') {
        exclude group: 'xml-apis'
    }
    testImplementation 'junit:junit:4.13.1'
}

// See https://github.com/JetBrains/gradle-intellij-plugin/
intellij {
    version = 'IU-2023.3.6'
}
patchPluginXml {
    sinceBuild = '223'
    untilBuild = '241.*'
}
publishPlugin {
    token = project.getProperty "intellijPublishToken"
}
tasks.withType(JavaCompile) {
    sourceCompatibility = "17"
    targetCompatibility = "17"
    options.encoding = 'UTF-8'
    options.compilerArgs += ['-Xlint:unchecked', '-Xlint:deprecation', '-parameters']
}

sourceSets {
    main {
        java.srcDirs = ['src']
        resources.srcDirs = ['resources']
    }
    test {

    }
}